Jazz playground (#1596)
* Milty Draft Framework

* Complete MVP Milty draft and mapmap framework